--- a/1/style.css
+++ b/1/style.css
@@ -14,7 +14,7 @@ body{
 #letter{
 	position: relative;
 	width: 100%;
-	height: 1000px;
+	height: 620px;
 	left: 0;
 	top: 0;
 	background-color: #080575;
@@ -34,24 +34,35 @@ body{
 	box-shadow: 0 0 20px #fff;
 }
 #cake{
-	left: 100px;
+	left: 300px;
 	position: absolute;
-	top: 380px;
+	top: 335px;
 	transition-duration: 4s;
 	transition-property: transform;
 }
 #cake:hover{
-	transform: rotate(360deg);
+	transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+}
+#dr{
+	left: 650px;
+	position: absolute;
+	top: 345px;
+	transition-duration: 4s;
+	transition-property: transform;
+	height: 175px;
+}
+#dr:hover{
+	transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
 }
 #text{
-	top: 100px;
+	top: 80px;
 	position: absolute;
 }
 #twice{
-	top: 180px;
+	top: 150px;
 	position: absolute;
 }
 #third{
-	top: 320px;
+	top: 290px;
 	position: absolute;
 }
