--- a/1/style.css
+++ b/1/style.css
@@ -3,7 +3,7 @@ body{
 }
 #top-menu{
 	top: 0;
-	position: fixed;
+	position: relative;
 	width: 100%;
 	height: 80px;
 	background-image: url(images.jpg);
@@ -14,7 +14,7 @@ body{
 #letter{
 	position: relative;
 	width: 100%;
-	height: 620px;
+	height: 1100px;
 	left: 0;
 	top: 0;
 	background-color: #080574;
@@ -25,7 +25,7 @@ body{
 }
 #bottom-menu{
 	bottom: 0;
-	position: fixed;
+	position: relative;
 	width: 100%;
 	height: 80px;
 	background-image: url(images.jpg);
@@ -36,7 +36,7 @@ body{
 #cake{
 	left: 300px;
 	position: absolute;
-	top: 335px;
+	top: 235px;
 	transition-duration: 4s;
 	transition-property: transform;
 }
@@ -46,7 +46,7 @@ body{
 #dr{
 	left: 650px;
 	position: absolute;
-	top: 345px;
+	top: 245px;
 	transition-duration: 4s;
 	transition-property: transform;
 	height: 175px;
@@ -55,14 +55,94 @@ body{
 	transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
 }
 #text{
-	top: 80px;
+	top: 0px;
 	position: absolute;
 }
 #twice{
-	top: 150px;
+	top: 65px;
 	position: absolute;
 }
 #third{
-	top: 290px;
+	top: 190px;
 	position: absolute;
+}
+#fourth{
+	left: 640px;
+	position: absolute;
+	top: 440px;
+}
+#dr1{
+	position: absolute;
+	top: 500px;
+	left: 60px;
+	height: 500px;
+	transition-duration: 4s;
+	transition-property: transform;
+}
+#dr2{
+	position: absolute;
+	top: 500px;
+	left: 480px;
+	height: 500px;
+	transition-duration: 4s;
+	transition-property: transform;
+}
+#dr3{
+	position: absolute;
+	top: 500px;
+	left: 900px;
+	height: 500px;
+	transition-duration: 4s;
+	transition-property: transform;
+}
+#dianoid{
+	position: absolute;
+	bottom: 85px;
+	opacity: 0;
+	left: 650px;
+	height: 300px;
+	width: 30px;
+	transition-property: opacity;
+}
+#dianoid2{
+	position: absolute;
+	bottom: 60px;
+	opacity: 0;
+	left: 1125px;
+	height: 300px;
+	width: 30px;
+	transition-property: opacity;
+}
+#dianoid:hover{
+	opacity: 1;
+}
+#dianoid2:hover{
+	opacity: 1;
+}
+.p{
+	color: #000;
+}
+#up-btn .arrow{
+	background-color: #fff;
+	width: 100%;
+	height: 100%;
+	-webkit-clip-path: polygon(
+		0 25%,
+		50% 0,
+		100% 25%,
+		66% 25%,
+		66% 100%,
+		33% 100%,
+		33% 25%,
+		0 25%
+		);
+}
+#up-btn{
+	position: absolute;
+	top: 10px;
+	right: 30px;
+	height: 50px;
+	width: 50px;
+	border: solid #fff 5px;
+	border-radius: 10px;
 }
