--- a/style.css
+++ b/style.css
@@ -243,6 +243,9 @@ body{
 	text-align: left;
 	padding: 15px;
 }
+.box4-more{
+	padding: 20px;
+}
 #box4-simple{
 	position: relative;
 	width: 400px;
@@ -396,19 +399,6 @@ body{
 #footer a:hover{
 	text-decoration: underline;
 }
-#top-menu-right-btn{
-	position: absolute;
-	left:0;
-	bottom: 0;
-	width: 80%;
-	height: 40px;
-	padding:5%;
-	color:#000;
-	margin:5%;
-	background-color: #974;
-	font-size: 35px;
-	border-radius: 5px;
-}
 #tmrb-menu{
 	position: absolute;
 	right: 0;
@@ -452,6 +442,7 @@ body{
 	left: 0;
 	top: 0;
 	width: 100%;
+	height: 100%;
 	transition-duration: 1s;
 	transition-property: transform,box-shadow;
 }
