--- a/menu/style.css
+++ b/menu/style.css
@@ -3,38 +3,49 @@ body{
 }
 #top-menu{
 	top: 0;
-	position: relative;
+	z-index: 1000;
+	position: fixed;
 	width: 100%;
 	height: 80px;
 	background-image: url(images.jpg);
 	box-shadow: 0 0 20px #fff;
+	color: #fff;
+}
+#top-menu p{
+	size: 200px;
+	position: absolute;
+	left: 42%;
+	top:20px;
 }
 #letter{
 	position: relative;
 	width: 100%;
-	height: 1120px;
+	height: 700px;
 	left: 0;
 	top: -20px;
 	background-color: #080574;
 	transition-duration: 4s;
 	transition-property: transform;
 	color: #fff;
-	text-shadow: 0 0 20px #fff;
 }
 #letter a{
 	position: absolute;
 	color: #fff;
 	text-decoration: none;
-	top:50px;
-	left:40%;
+	top:150px;
+	left:45%;
+}
+#letter a:hover{
+	text-decoration: underline;
+	text-shadow: 0 0 20px #fff;
 }
 #bottom-menu{
-	position: relative;
+	position: fixed;
 	width: 100%;
 	height: 80px;
 	background-image: url(images.jpg);
 	box-shadow: 0 0 20px #fff;
-	top: 0px;
+	bottom: 0px;	
 }
 #up-btn .arrow{
 	background-color: #fff;
