--- a/diana/style.css
+++ b/diana/style.css
@@ -20,7 +20,7 @@ body{
 #letter{
 	position: relative;
 	width: 100%;
-	height: 650px;
+	height: 600px;
 	left: 0;
 	top: -20px;
 	background-color: #080574;
@@ -65,16 +65,9 @@ body{
 #up-btn{
 	position: absolute;
 	top: 10px;
-	left:40%;
+	left: 20px;
 	height: 50px;
 	width: 50px;
 	border: solid #fff 5px;
 	border-radius: 10px;
-}
-#ppp{
-	position: absolute;
-	left: 45%;
-	top:10px;
-	color: #fff;
-	size: 200px;
 }
