--- a/Game/style.css
+++ b/Game/style.css
@@ -20,17 +20,17 @@ body{
 }
 #hard1{
 	background-color: #2fff00;
-	left: 90px;
+	left: 7%;
 	top: 200px;
 }
 #hard2{
 	background-color: #bfff00;
-	left: 490px;
+	left: 36%;
 	top: -100px;
 }
 #hard3{
 	background-color: #e80e19;
-	left: 890px;
+	left: 66%;
 	top: -400px;
 }
 .hards{
