--- a/Game/style.css
+++ b/Game/style.css
@@ -12,7 +12,7 @@ body{
 }
 #hi{
 	position: absolute;
-	left: 25%;
+	left: 30%;
 	top: 10px;
 	width: 100%;
 	height: 100px;
@@ -47,4 +47,9 @@ body{
 }
 .hards:hover{
 	box-shadow: 0 0 20px #fff;
+}
+#img{
+	position: absolute;
+	z-index: 0;
+	width: 100%;
 }
