--- a/Game/Levels/level1/style.css
+++ b/Game/Levels/level1/style.css
@@ -23,3 +23,35 @@ body{
 	z-index: 0;
 	width: 100%;
 }
+#up-btn .arrow{
+	z-index: 1000;
+	background-color: #fff;
+	width: 100%;
+	height: 100%;
+	-webkit-clip-path: polygon(
+		0 25%,
+		50% 0,
+		100% 25%,
+		66% 25%,
+		66% 100%,
+		33% 100%,
+		33% 25%,
+		0 25%
+		);
+}
+#up-btn{
+	z-index: 1000;
+	position: absolute;
+	top: 10px;
+	left: 20px;
+	height: 50px;
+	width: 50px;
+	border: solid #fff 5px;
+	border-radius: 10px;
+}
+#list iframe{
+	position: absolute;
+	top: 50%;
+	left: 35%;
+	z-index: 1000;
+}
