--- a/menu/style.css
+++ b/menu/style.css
@@ -41,6 +41,10 @@ body{
 	top: 180px;
 	left: 45%;
 }
+#lizon{
+	top: 210px;
+	left: 45%;
+}
 .text:hover{
 	text-decoration: underline;
 	text-shadow: 0 0 20px #fff;
