--- a/Game/Levels/level1/style.css
+++ b/Game/Levels/level1/style.css
@@ -56,11 +56,10 @@ body{
 	z-index: 1000;
 	background-color: #fff;
 }
-random_number{
-	top:100px;
-	left: 46%;
-	position: absolute;
-	width: 400px;
-	height: 100px;
+#inputik{
+	position: relative;
+	top: 50%;
+	left: 35%;
 	z-index: 1000;
+	background-color: #fff;
 }
