--- a/Game/Levels/level1/style.css
+++ b/Game/Levels/level1/style.css
@@ -7,7 +7,7 @@ body{
 	width: 100%;
 	height: 100%;
 	left: 0;
-	top: 0;
+	top: -20px;
 	background-color: #825017;
 }
 #hi{
@@ -42,7 +42,7 @@ body{
 #up-btn{
 	z-index: 1000;
 	position: absolute;
-	top: 10px;
+	top: 30px;
 	left: 20px;
 	height: 50px;
 	width: 50px;
@@ -56,10 +56,12 @@ body{
 	z-index: 1000;
 	background-color: #fff;
 }
-#inputik{
-	position: relative;
+#ppp{
+	position: absolute;
 	top: 50%;
-	left: 35%;
-	z-index: 1000;
-	background-color: #fff;
+	left: 36%;
+	width: 400px;
+	z-index: 10000;
+	color: #000;
+	size: 20px;
 }
