--- a/Game/Levels/level1/style.css
+++ b/Game/Levels/level1/style.css
@@ -8,7 +8,7 @@ body{
 	height: 100%;
 	left: 0;
 	top: -20px;
-	background-color: #825017;
+	background-color: #fff;
 }
 #hi{
 	position: absolute;
@@ -16,7 +16,7 @@ body{
 	top: 10px;
 	width: 100%;
 	height: 100px;
-	font-size: 60px;S
+	font-size: 60px;
 }
 #img{
 	position: absolute;
@@ -64,4 +64,27 @@ body{
 	z-index: 10000;
 	color: #000;
 	size: 20px;
+}
+#download{
+	position: absolute;
+	top: 230px;
+	width: 225px;
+	height: 80px;
+	left: 41%;
+	z-index: 1000;
+	background-color: #fff;
+	box-shadow: 0 0 25px #fff;
+	text-shadow: 0 0 15px #000;
+	border-radius: 50px;
+	text-decoration: none;
+	text-align: center;
+}
+#list a{
+	color: #000;
+}
+#list a:hover #download{
+	text-decoration: underline;
+}
+#downloadp{
+	text-align: center;
 }
